# agentic-rag-kb

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
app/: __init__.py  logging_config.py  main.py  settings.py
app/api/: __init__.py  routes_chat.py  routes_docs.py  routes_eval.py
app/evaluation/: __init__.py  dataset_builder.py  metrics.py  ragas_runner.py  reports.py
app/graphs/: __init__.py  edges.py  langgraph_native.py  main_graph.py  states.py  sub_retrieval_graph.py
app/indexing/: __init__.py  dense_indexer.py  hybrid_indexer.py  metadata_store.py  qdrant_client.py  schemas.py  sparse_indexer.py
app/ingestion/: __init__.py  cleaners.py  loaders.py  parent_child_builder.py  parsers.py  pipeline.py  splitters.py
app/llm/: __init__.py  embeddings.py  ollama_client.py  output_parsers.py  prompts.py
app/memory/: __init__.py  conversation_store.py  long_context_manager.py  summarizer.py
app/observability/: __init__.py  callbacks.py  events.py  trace.py
app/retrieval/: __init__.py  citation.py  context_builder.py  dense_retriever.py  hybrid_retriever.py  (+4 more)
configs/: app.yaml  model.yaml  qdrant.yaml  ragas.yaml  retriever.yaml
scripts/: __init__.py  ask_baseline.py  build_chunks.py  build_index.py  demo_hitl.py  demo_memory_compression.py  demo_send_parallel.py  index_chunks.py  ingest_docs.py  ingest_documents.py  rerank.py  retrieve.py  run_api.py  run_eval.py  run_gradio.py  run_subgraph.py
tests/: test_agent_fault_tolerance.py  test_agent_nodes.py  test_answer_aggregation.py  test_baseline_rag.py  test_chunking.py  test_document_ingestion.py  test_gradio_ui.py  test_graph_state.py  test_hitl.py  test_indexing.py  test_main_graph_send.py  test_memory_compression.py  test_project_skeleton.py  test_rerank.py  test_retrieval.py  test_retrieval_subgraph.py  test_task_decomposition.py
(+76 files in other folders)
