[project]
name = "agentic-rag-kb"
version = "0.1.0"
description = "Enterprise Agentic RAG knowledge base QA system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
full = [
    "langgraph>=0.2",
    "langchain>=0.2",
    "qdrant-client>=1.9",
    "ragas>=0.1.16",
    "gradio>=4.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pypdf>=4.2",
    "python-docx>=1.1",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

